--- a/pom.xml
+++ b/pom.xml
@@ -9,17 +9,17 @@
 		Woodland_Mansion
 	</artifactId>
 	<version>
-		version 0.1
+		0.1.0
 	</version>
 	<properties>
 		<project.build.sourceEncoding>
 			UTF-8
 		</project.build.sourceEncoding>
 		<maven.compiler.source>
-			11
+			21
 		</maven.compiler.source>
 		<maven.compiler.target>
-			11
+			21
 		</maven.compiler.target>
 	</properties>
 	<dependencies>
@@ -31,7 +31,7 @@
 				javafx-controls
 			</artifactId>
 			<version>
-				13
+				21.0.5
 			</version>
 		</dependency>
 		<dependency>
@@ -42,7 +42,7 @@
 				javafx-fxml
 			</artifactId>
 			<version>
-				13
+				21.0.5
 			</version>
 		</dependency>
 	</dependencies>
@@ -63,12 +63,10 @@
 					maven-compiler-plugin
 				</artifactId>
 				<version>
-					3.8.0
+					3.13.0
 				</version>
 				<configuration>
-					<release>
-						11
-					</release>
+					<release>21</release>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -79,7 +77,7 @@
 					javafx-maven-plugin
 				</artifactId>
 				<version>
-					0.0.6
+					0.0.8
 				</version>
 				<executions>
 					<execution>
